--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "prettier.arrowParens": "avoid"
+  "prettier.arrowParens": "avoid",
+  "prettier.useEditorConfig": true,
+  "javascript.format.semicolons": "insert",
+  "typescript.format.semicolons": "insert"
 }
